WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287837
Debug assertion hit when launching WebKit, inside `virtual void getScreenTimeURLs`
https://bugs.webkit.org/show_bug.cgi?id=287837
Summary
Debug assertion hit when launching WebKit, inside `virtual void getScreenTime...
Jessica Cheung
Reported
2025-02-17 16:38:53 PST
rdar://145016909
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2025-02-17 16:47:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40739
EWS
Comment 2
2025-02-17 17:42:22 PST
Committed
290513@main
(e1d474eda66a): <
https://commits.webkit.org/290513@main
> Reviewed commits have been landed. Closing PR #40739 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug