Debug assertion hit when launching WebKit, inside 'virtual void getScreenTimeURLs' https://bugs.webkit.org/show_bug.cgi?id=287837 rdar://145016909

Reviewed by Abrar Rahman Protyasha.

Added default call for the completion handler inside `getScreenTimeURLs`.

* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreClient.h:
(WebKit::WebsiteDataStoreClient::getScreenTimeURLs const):

Canonical link: https://commits.webkit.org/290513@main